<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_InnerCapillaryTubeMatsSetParameters" Id="{378fd409-6ff9-4e5e-89be-ef859a2fd764}">
    <Declaration><![CDATA[{attribute 'OPC.UA.DA.StructuredType' := '1'}
TYPE ST_InnerCapillaryTubeMatsSetParameters :
STRUCT
	bHeatingModeAlgorithm : BOOL;
	bHeatingModeManual : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>